[gd_scene load_steps=7 format=3 uid="uid://bikmbnxgn4uqm"]

[ext_resource type="Script" uid="uid://wcb1l8b0dhup" path="res://scenes/main_screens/character_location.gd" id="1_3xprj"]
[ext_resource type="PackedScene" uid="uid://caj4vm4x2p0am" path="res://scenes/support_screens/cheat_panel.tscn" id="3_22u0r"]
[ext_resource type="Texture2D" uid="uid://c45svqin8nasu" path="res://assets/professions/herbalist.png" id="4_eg6yx"]
[ext_resource type="Texture2D" uid="uid://5sfb8p5aidcv" path="res://assets/background/locations/location_1.png" id="5_fl8aw"]
[ext_resource type="PackedScene" uid="uid://btkqrwpy7ojlt" path="res://scenes/support_screens/character_hud.tscn" id="6_plept"]
[ext_resource type="PackedScene" uid="uid://cvndrn0efp2w5" path="res://scenes/support_screens/debug_console.tscn" id="6_wrcjo"]

[node name="LocationActivities" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3xprj")

[node name="CharacterHUD" parent="." instance=ExtResource("6_plept")]
layout_mode = 1

[node name="LocationDescPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 172.0
offset_right = -32.0
offset_bottom = 631.0
grow_horizontal = 2

[node name="LocationPicture" type="TextureRect" parent="LocationDescPanel"]
layout_mode = 1
offset_left = 15.0
offset_top = 12.0
offset_right = 667.0
offset_bottom = 372.0
texture = ExtResource("5_fl8aw")
expand_mode = 1
stretch_mode = 4

[node name="LocationName" type="Label" parent="LocationDescPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 376.0
offset_right = 111.0
offset_bottom = 406.0
text = "Location: "

[node name="LocationDesc" type="Label" parent="LocationDescPanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 407.0
offset_right = 130.0
offset_bottom = 437.0
text = "Description"

[node name="ActivitiesPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = -5.0
offset_right = 687.0
offset_bottom = 122.0
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ActivitiesPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 36.0
offset_right = 652.0
offset_bottom = 109.0

[node name="TextureButton" type="TextureButton" parent="ActivitiesPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_eg6yx")
ignore_texture_size = true
stretch_mode = 4

[node name="ActivitesLabel" type="Label" parent="ActivitiesPanel"]
layout_mode = 0
offset_top = -1.0
offset_right = 106.0
offset_bottom = 30.0
text = "Activities:"

[node name="DebugConsole" parent="." instance=ExtResource("6_wrcjo")]
layout_mode = 1
offset_top = 0.0
offset_bottom = 0.0

[node name="CheatPanel" parent="." instance=ExtResource("3_22u0r")]
layout_mode = 1

[node name="ProfPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 767.0
offset_right = 542.0
offset_bottom = 1014.0

[node name="TitleLabel" type="Label" parent="ProfPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 6.0
offset_right = 332.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 32
text = "Activities in location:"

[node name="HBoxHerbalism" type="HBoxContainer" parent="ProfPanel/TitleLabel"]
layout_mode = 0
offset_left = -2.0
offset_top = 44.0
offset_right = 414.0
offset_bottom = 99.0

[node name="HerbalismLabel" type="Label" parent="ProfPanel/TitleLabel/HBoxHerbalism"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Herbalism"

[node name="HerbalismStartButton" type="Button" parent="ProfPanel/TitleLabel/HBoxHerbalism"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="HerbalismEndButton" type="Button" parent="ProfPanel/TitleLabel/HBoxHerbalism"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 32
text = "End"

[node name="HBoxAlchemy" type="HBoxContainer" parent="ProfPanel/TitleLabel"]
layout_mode = 0
offset_left = -1.0
offset_top = 105.0
offset_right = 415.0
offset_bottom = 160.0

[node name="AlchemyLabel" type="Label" parent="ProfPanel/TitleLabel/HBoxAlchemy"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Alchemy"

[node name="AlchemyStartButton" type="Button" parent="ProfPanel/TitleLabel/HBoxAlchemy"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="AlchemyEndButton" type="Button" parent="ProfPanel/TitleLabel/HBoxAlchemy"]
custom_minimum_size = Vector2(32, 64)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "End"

[connection signal="button_down" from="ActivitiesPanel/HBoxContainer/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="pressed" from="ProfPanel/TitleLabel/HBoxHerbalism/HerbalismStartButton" to="." method="_on_herbalism_start_button_pressed"]
[connection signal="pressed" from="ProfPanel/TitleLabel/HBoxHerbalism/HerbalismEndButton" to="." method="_on_herbalism_end_button_pressed"]
[connection signal="pressed" from="ProfPanel/TitleLabel/HBoxAlchemy/AlchemyStartButton" to="." method="_on_alchemy_start_button_pressed"]
[connection signal="pressed" from="ProfPanel/TitleLabel/HBoxAlchemy/AlchemyEndButton" to="." method="_on_alchemy_end_button_pressed"]
